js/src/tests/test262/language/expressions/class/elements/syntax/early-errors/invalid-names/field-init-heritage-member-expression-bad-reference.js
DONOTEVALUATE
(
)
;
class
Parent
{
#
x
=
42
;
}
var
C
=
class
extends
Parent
{
f
=
something
.
#
x
}
;
